--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">zatsit</string>
-    <string name="title_activity_main">zatsit</string>
-    <string name="package_name">zatsit.com</string>
-    <string name="custom_url_scheme">zatsit.com</string>
+    <string name="app_name">App</string>
+    <string name="title_activity_main">App</string>
+    <string name="package_name">com.example.app</string>
+    <string name="custom_url_scheme">com.example.app</string>
 </resources>
